Fixed hamburger visibility issue

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -171,14 +171,18 @@ a {
 	min-height: 220px;
 }
 
+.horizontal-bar-chart-col {
+	margin-top: 10px;
+}
+
 .radial-bar-chart-wrapper {
 	padding: 20px 1rem;
 }
 
 .app-bar-row {
 	/*margin: 16px 0px;*/
-	height: 22px;
-	margin-top: 16px;
+	/*height: 22px;*/
+	margin-top: 4px;
 	width: 100%;
 }
 
